<package format="3">
  <name>ros2_parameters</name>
  <version>0.0.1</version>
  <description>ROS2 Parameters Assignment</description>
  <maintainer email="you@example.com">Charan Teja Kolluri</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
